fix: article related tags not wraping

--- a/public/assets/stylesheet/article.css
+++ b/public/assets/stylesheet/article.css
@@ -67,3 +67,8 @@
     aspect-ratio: 1 / 1;
     object-fit: cover;
 }
+
+.article-body iframe {
+    width: 100%;
+    aspect-ratio: 16 / 9;   
+}
