--- a/public/assets/stylesheet/style.css
+++ b/public/assets/stylesheet/style.css
@@ -1715,6 +1715,7 @@ article.article-4 {
     display: -webkit-box;
     display: -ms-flexbox;
     display: -webkit-flex;
+    flex-wrap: wrap;
     margin-top: 3px;
 }
 
@@ -1727,12 +1728,11 @@ article.article-4 {
     display: -webkit-box;
     display: -ms-flexbox;
     display: -webkit-flex;
+    justify-content: space-between;
     position: relative;
 }
 
 .content-blog-detail .bottom-content .social-share {
-    position: absolute;
-    right: 0;
     margin-right: -3px;
 }
 
